added laravel telescope + avatar in dashboard admin
